# models/empresa.js
@@ -5,6 +5,7 @@ module.exports = (sequelize, DataTypes) => {
     static associate(models) {
       Empresa.belongsTo(models.Usuario, { foreignKey: "UsuarioID" })
       Empresa.belongsTo(models.TipoContratacao, { foreignKey: "TipoContratacaoID" })
+      Empresa.belongsTo(models.Banco, { foreignKey: "BancoID" }) // Nova associação com Banco
     }
   }
 
@@ -18,6 +19,10 @@ module.exports = (sequelize, DataTypes) => {
       UsuarioID: {
         type: DataTypes.INTEGER,
         allowNull: false,
+        references: {
+          model: "Usuarios",
+          key: "UsuarioID",
+        },
       },
       Nome: {
         type: DataTypes.STRING,
@@ -30,6 +35,10 @@ module.exports = (sequelize, DataTypes) => {
       TipoContratacaoID: {
         type: DataTypes.INTEGER,
         allowNull: false,
+        references: {
+          model: "TipoContratacao",
+          key: "TipoContratacaoID",
+        },
       },
       Valor: {
         type: DataTypes.DECIMAL(10, 2),
@@ -43,12 +52,36 @@ module.exports = (sequelize, DataTypes) => {
         type: DataTypes.BOOLEAN,
         defaultValue: true,
       },
+      DiaPagamento_1: {
+        type: DataTypes.INTEGER,
+        allowNull: true,
+        validate: {
+          min: 1,
+          max: 31,
+        },
+      },
+      DiaPagamento_2: {
+        type: DataTypes.INTEGER,
+        allowNull: true,
+        validate: {
+          min: 1,
+          max: 31,
+        },
+      },
+      BancoID: {
+        type: DataTypes.INTEGER,
+        allowNull: true,
+        references: {
+          model: "Bancos",
+          key: "BancoID",
+        },
+      },
     },
     {
       sequelize,
       modelName: "Empresa",
       tableName: "Empresas",
-      timestamps: false, // Assumindo que não há campos de timestamp na tabela
+      timestamps: false,
     },
   )
 
